Quick fix on height for skateboards in mobile.  Made it more responsive so that wrap around is shown and centered.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -531,6 +531,10 @@ a {
   background-color: $background-color;
 
   box-shadow: 0 4px $shadow-color-2;
+
+  @include media($mobile) {
+    height: auto;
+  }
 }
 
 .skateboards {
